Distortion component fix, slider css fix for Firefox, slider component 'disabled' property.

--- a/src/components/shared/SliderComponent/SliderComponent.module.scss
+++ b/src/components/shared/SliderComponent/SliderComponent.module.scss
@@ -19,13 +19,14 @@
     display: block;
   }
 
-  input[type=range]::-webkit-slider-runnable-track{
+  input[type=range]::-webkit-slider-runnable-track {
     -webkit-appearance: none;
     background-color: #444;
     color: #444;
     height: 20px;
     width: 200px;
   }
+
   input[type=range]::-moz-range-track {
     -webkit-appearance: none;
     background-color: #444;
@@ -74,9 +75,19 @@
   input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
     background: linear-gradient(to right, grey 0%, grey calc(50% - 1px), white calc(50% - 1px), white calc(50% + 1px), grey calc(50% + 1px), grey 100%);
-    opacity: 1;
     width: 15px;
     height: 40px;
     transform: translateY(-10px);
+
+  }
+  input[type=range]::-moz-range-thumb  {
+    background: linear-gradient(to right, grey 0%, grey calc(50% - 1px), white calc(50% - 1px), white calc(50% + 1px), grey calc(50% + 1px), grey 100%);
+    width: 12px;
+    height: 40px;
+    border-radius: 0;
+  }
+
+  input[type=range]:disabled::-webkit-slider-thumb {
+    background: none;
   }
 }
